# devtrack

./: .env.example  .gitignore  README.md  main.py  pdf_content.txt  pyproject.toml
app/: config.py  database.py  main.py
app/core/: dependencies.py  security.py
app/models/: comment.py  project.py  task.py  user.py
app/routers/: auth.py  projects.py  tasks.py  users.py
app/schemas/: comment.py  project.py  task.py  user.py
tests/: test_main.py
